--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "check-lint": "eslint . --ext ts --ext tsx --ext js",
     "prepare": "husky install",
     "prettier": "prettier --config .prettierrc.json --write src/**/*.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,8 @@
     }
   },
   "dependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/supertest": "^2.0.12",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
@@ -39,6 +42,7 @@
     "google-auth-library": "^7.11.0",
     "googleapis": "^101.0.0",
     "helmet": "^5.0.2",
+    "jest": "^29.5.0",
     "joi": "^17.6.3",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
@@ -48,6 +52,8 @@
     "nodemon": "^2.0.15",
     "sib-api-v3-sdk": "^8.4.0",
     "sib-api-v3-typescript": "^2.2.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
